--- a/app/src/main/res/layout/consult_docinfo_layout.xml
+++ b/app/src/main/res/layout/consult_docinfo_layout.xml
@@ -5,7 +5,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:padding="@dimen/docinfo_padding"
+    android:paddingLeft="@dimen/docinfo_padding"
+    android:paddingRight="@dimen/docinfo_padding"
     android:id="@+id/layer_docInfo">
 
     <com.facebook.drawee.view.SimpleDraweeView
@@ -16,9 +17,9 @@
         android:layout_marginLeft="@dimen/docinfo_padding"
         android:layout_marginRight="@dimen/docinfo_padding"
         fresco:roundAsCircle="true"
-        fresco:placeholderImage="@drawable/user_default_url"
+        fresco:placeholderImage="@drawable/ic_doctor_default"
         fresco:placeholderImageScaleType="fitCenter"
-        fresco:failureImage="@drawable/user_default_url"
+        fresco:failureImage="@drawable/ic_doctor_default"
         fresco:failureImageScaleType="fitCenter"/>
 
 
@@ -45,9 +46,10 @@
             android:layout_marginLeft="10dp"
             android:ellipsize="end"
             android:padding="3dp"
+            android:maxLines="2"
             android:textSize="@dimen/textsize_h5_12sp"
             android:textColor="@color/gray_99"
-            tools:text="全科医生，高级健康管理师，全科医生，高级健康管理师"/>
+            tools:text="全科医生，高级健康管理师，全科医生，高级健康管理师，高级健康管理师，全科医生，高级健康管理师"/>
 
         <TextView
             android:id="@+id/tv_description"
