--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="gray_28">#282828</color>
     <color name="gray_33">#333333</color>
     <color name="gray_66">#666666</color>
+    <color name="gray_87">#878787</color>
     <color name="gray_99">#999999</color>
     <color name="gray_b2">#B2B2B2</color>
     <!--<color name="gray_ee">#EEEEEE</color>-->
