--- a/app/src/main/res/layout/consult_docinfo_layout.xml
+++ b/app/src/main/res/layout/consult_docinfo_layout.xml
@@ -5,8 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:paddingLeft="@dimen/docinfo_padding"
-    android:paddingRight="@dimen/docinfo_padding"
+    android:padding="@dimen/padding_10dp"
     android:id="@+id/layer_docInfo">
 
     <com.facebook.drawee.view.SimpleDraweeView
