--- a/app/src/main/res/layout/item_reportlist_error.xml
+++ b/app/src/main/res/layout/item_reportlist_error.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="12"
-            android:textColor="@color/gray_33"
+            android:textColor="@color/main_color_red"
             android:textSize="@dimen/textsize_h3_16sp" />
 
         <TextView
