--- a/app/src/main/res/layout/item_right_consult_datail.xml
+++ b/app/src/main/res/layout/item_right_consult_datail.xml
@@ -40,7 +40,7 @@
             android:layout_marginRight="@dimen/consult_textview_marginleft"
             android:layout_toLeftOf="@id/drawee_consult_item_photo"
             android:layout_alignTop="@id/drawee_consult_item_photo"
-            android:background="@drawable/chat_icon_bubble_right_v2"
+            android:background="@drawable/bg_chat_right_"
             android:gravity="left|center_vertical"
             android:paddingTop="6dp"
             android:paddingBottom="6dp"
@@ -58,7 +58,7 @@
             android:layout_marginRight="@dimen/consult_textview_marginleft"
             android:layout_toLeftOf="@id/drawee_consult_item_photo"
             android:layout_alignTop="@id/drawee_consult_item_photo"
-            android:background="@drawable/chat_icon_bubble_right_v2"
+            android:background="@drawable/bg_chat_right_"
             android:gravity="left|center_vertical"
             android:paddingTop="6dp"
             android:paddingBottom="6dp"
