--- a/app/src/main/res/layout/home_frag.xml
+++ b/app/src/main/res/layout/home_frag.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v4.widget.SwipeRefreshLayout
+        <com.ihaozuo.plamexam.common.SwipeRLayout
             android:id="@+id/SRLayoutHome"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -23,7 +23,7 @@
                 android:layout_height="match_parent"
                 android:headerDividersEnabled="true" />
 
-        </android.support.v4.widget.SwipeRefreshLayout>
+        </com.ihaozuo.plamexam.common.SwipeRLayout>
 
 
     </FrameLayout>
