--- a/app/src/main/res/layout/item_reportlist_detail_child.xml
+++ b/app/src/main/res/layout/item_reportlist_detail_child.xml
@@ -39,7 +39,8 @@
             android:paddingBottom="@dimen/padding_9dp"
             android:paddingLeft="@dimen/padding_12dp"
             android:paddingRight="@dimen/padding_12dp"
-            android:paddingTop="@dimen/padding_9dp">
+            android:paddingTop="@dimen/padding_9dp"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/lineCenter"
